# belief-graph-orchestrator

./: .gitignore  README.md  THINKING.md  pyproject.toml
configs/: runtime.default.json  train.mock.json
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  MATH.md  TRAINING_AND_REPLAY.md
examples/large_hn_navigate/: result.json
examples/large_httpbin_form/: result.json
examples/large_servo_form/: result.json
examples/large_servo_hn/: result.json
examples/large_wikipedia_search/: result.json
scripts/: capture_examples.py  capture_real_examples.py  capture_servo_examples.py  large_scale_test.py  record_mock.py  replay_bundle.py  run_demo.py  train_node_scorer.py  train_verifier.py
src/belief_graph_orchestrator/: README.md  __init__.py  belief.py  cli.py  compiler.py  config.py  demo.py  graph.py  io_streams.py  iphone.py  journal.py  memory.py  models.py  perception.py  pointer.py  recovery.py  reflection.py  retrieval.py  runtime.py  scheduler.py  schemas.py  serialization.py  target.py  task.py  utils.py  verifier.py
src/belief_graph_orchestrator/backends/: __init__.py  mock.py  mock_desktop.py  playwright.py  playwright_desktop.py  playwright_servo.py  real.py  simulator.py
src/belief_graph_orchestrator/training/: __init__.py  dataset.py  distillation.py  eval.py  losses.py  replay.py  synthetic.py  traces.py  trainer.py
tests/: conftest.py  test_desktop_smoke.py  test_replay.py  test_smoke.py  test_training.py
