[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "belief-graph-orchestrator"
version = "0.1.0"
description = "Reference Python brain for a multi-scale pointer-centric GUI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["torch>=2.2", "torchvision>=0.17", "sentence-transformers>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
playwright = ["playwright>=1.40", "Pillow>=10.0"]

[project.scripts]
belief-graph-orchestrator = "belief_graph_orchestrator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
